--- a/MobilCase-iOS/Listing/ListingViewController.xib
+++ b/MobilCase-iOS/Listing/ListingViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListingViewController" customModule="MobilCase_iOS" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="gMV-PM-7nz" id="T95-pF-eDc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,18 +20,24 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gn-hE-03a">
-                    <rect key="frame" x="175.66666666666666" y="415.66666666666669" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="gMV-PM-7nz">
+                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="x9z-5x-xwt">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="8gn-hE-03a" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="4Md-vj-sgR"/>
-                <constraint firstItem="8gn-hE-03a" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="KFR-Me-feh"/>
+                <constraint firstItem="gMV-PM-7nz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="KeE-yu-w3x"/>
+                <constraint firstItem="gMV-PM-7nz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="abG-0b-lGW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="gMV-PM-7nz" secondAttribute="bottom" id="bJu-Mf-eZf"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gMV-PM-7nz" secondAttribute="trailing" id="tDI-Yx-3Om"/>
             </constraints>
             <point key="canvasLocation" x="98" y="20"/>
         </view>
